# cl-2024-1-lab

./: .gitignore  README.md  pyproject.toml  translator.py
AdrianaMichelAvilaGarcia/practica0/: README.md
AdrianaMichelAvilaGarcia/practica1/: Practica1.ipynb
AdrianaMichelAvilaGarcia/practica2/: Practica2.ipynb  Practica2.py  README.md
AdrianaMichelAvilaGarcia/practica3/: Practica3.ipynb  README.md
AdrianaMichelAvilaGarcia/practica4/: Practica4.ipynb  README.md
AdrianaMichelAvilaGarcia/practica6/: Practica6.ipynb  README.md
AdrianaMichelAvilaGarcia/practica7/: Practica7.ipynb  README.md  el-quijote.txt  plain_processed_quijote.txt  quijote_tokenized.txt  quijote_tokenized_1k.txt  quijote_tokenized_2k.txt  quijote_tokenizer.model
AdrianaMichelAvilaGarcia/practica8/: README.md
AlejandroAxelRodriguezSanchez/practica0/: README.md
AlejandroAxelRodriguezSanchez/practica01/: 1_phonetics.ipynb
AlejandroAxelRodriguezSanchez/practica02/: Practica02.ipynb  README.md  practica02.py  requirements.txt
CarmenPaolaInnesBarron/practica0/: README.md
CarmenPaolaInnesBarron/practica1/: phonetics.py
GilbertoBarrancoSanchez/: README.md
JoseLuisOnofreFranco/: README.md
LeninPavonAlvarez/: README.md
MikelSeguraElizalde/: README.md
diagrams/: git_work_model.drawio
notebooks/: 0_intro_config.ipynb  1_phonetics.ipynb  2_morphology.ipynb  3_1_pos_tagging_(HMM).ipynb  3_2_pos_tagging_(CRFs).ipynb  4_zipf.ipynb  5_tokenization.ipynb  6_Word_Embeddings_(Part_I).ipynb  6_Word_Embeddings_(Part_II).ipynb  7_Modelos_del_lenguaje.ipynb  8_Neural_machine_translation.ipynb
(+160 files in other folders)
