[tool.poetry]
name = "cl-2024-1-lab"
version = "0.0.1"
description = ""
authors = ["Diego A. Barriga Martínez <dbarriga@ciencias.unam.mx>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "cl_2024_1_lab"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
jupyterlab = "^4.0.3"
nltk = "^3.8.1"
sklearn-crfsuite = "^0.3.6"
scikit-learn = "^1.3.1"
unidecode = "^1.3.7"
jupytext = "^1.15.2"
subword-nmt = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
